# Rawrr-2.0

./: .gitignore  AUTO_SCRAPER_GUIDE.md  Dockerfile  LICENSE  README.md  SIMPLE_SETUP_GUIDE.md  auto_scraper.py  creators.csv  docker-compose.yml  example_discovery.py  pyproject.toml  pytest.ini  requirements.txt  run_auto_scraper.py  setup_auto_scraper.py  simple_auto_scraper.py  simple_setup.py  start_workers.py
.github/workflows/: ci.yml
creatorscraper/: __init__.py  cli.py  run_scraper.py
creatorscraper/models/: __init__.py  schemas.py
creatorscraper/sources/: __init__.py  instagram.py  instagram_discovery.py  linkedin.py  niche_detector.py
creatorscraper/storage/: __init__.py  supabase_client.py
creatorscraper/tasks/: __init__.py  worker.py
creatorscraper/tests/: __init__.py  test_instagram.py  test_linkedin.py  test_niche_detector.py  test_parsers.py  test_supabase_client.py
creatorscraper/utils/: __init__.py  parsers.py  proxy_manager.py  rate_limiter.py  ua_rotation.py
sql/: create_tables.sql
